--- a/app/globals.css
+++ b/app/globals.css
@@ -121,3 +121,16 @@ html, body {
 .slider-container {
   overflow: hidden; /* Prevents content from overflowing the slider */
 }
+
+@keyframes custom-pulse {
+  0%, 100% {
+      transform: scale(1);
+  }
+  50% {
+      transform: scale(1.1);
+  }
+}
+
+.animate-custom-pulse {
+  animation: custom-pulse 1s infinite;
+}
