--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,16 @@
 * {
   font-family: 'Poppins', sans-serif;
 }
+body {
+  background-color: #fff;
+  color: #000;
+}
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #333;
+    color: #fff;
+  }
+}
 
 html {
   scroll-behavior: smooth !important;
