--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,8 @@ body {
 }
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: #333;
-    color: #fff;
+    background-color: #fff;
+    color: #000;
   }
 }
 
