--- a/app/globals.css
+++ b/app/globals.css
@@ -8,10 +8,11 @@
 * {
   font-family: 'Poppins', sans-serif;
 }
-body {
-  background-color: #fff;
-  color: #000;
-}
+/* body {
+  font-family: 'Inter', sans-serif;
+  background-color: #ffffff;
+  color: #333; 
+}*/
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #fff;
